fixed app overflowing in the X axis

--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -25,7 +25,7 @@ img {
 }
 
 #app {
-  min-width: 100vw;
+  min-width: 100%;
   min-height: 100vh;
 
   background-color: map.get($primary, light);
